--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,14 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+*.mp3
+/transcription_queue_new.json
+/transcription_queue.json
+/spiritual_transcripts.md
+/spiritual_transcripts.md.old
+/transcript1.md
+/transcript.txt
+/batch_transcribe.py
+/spiritual_transcripts.docx
+/transcribe.py
+/yt_lister.py
